--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,8 @@ description: Demonstrates how to use the interactive_webview plugin.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.17.6 <3.0.0"
+  flutter: ">=2.5.0"
 
 dependencies:
   flutter:
