Restore iOS example.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,3 +17,5 @@ flutter:
       android:
         package: com.nover.interactivewebview
         pluginClass: InteractiveWebviewPlugin
+      ios:
+        pluginClass: InteractiveWebviewPlugin
